# CppInterOp

./: .clang-format  .clang-tidy  .codecov.yml  .gitignore  .readthedocs.yaml  CMakeLists.txt  CONTAINER.md  Dockerfile  Emscripten-build-instructions.md  Exports.txt  LICENSE.txt  README.md  VERSION  apptainer.def  environment-dev.yml  environment-wasm-build.yml  environment-wasm-host.yml  environment-wasm.yml  package-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug-report.yml  02-feature-request.yml  03-documentation.yml
.github/actions/Build_LLVM/: action.yml
.github/actions/Build_LLVM_WASM/: action.yml
.github/actions/Build_and_Test_CppInterOp/: action.yml
.github/actions/Build_and_Test_cppyy/: action.yml
.github/actions/Miscellaneous/Install_Dependencies/: action.yml
.github/actions/Miscellaneous/Save_PR_Info/: action.yml
.github/actions/Miscellaneous/Select_Default_Build_Type/: action.yml
.github/actions/Miscellaneous/Setup_Compiler/: action.yml
.github/workflows/: MacOS-arm.yml  MacOS.yml  Ubuntu-arm.yml  Ubuntu.yml  Windows-arm.yml  Windows.yml  bazel.yml  ci.yml  clang-format.yml  clang-tidy-review-post.yml  clang-tidy-review.yml  clang-tidy.yml  containers.yml  deploy-pages.yml  emscripten.yml  line-endings.yml  main.yml  markdown-linter.yml  non-emscripten.yml  root.yml  rtd-preview.yml  stale-pr-and-issues.yml
benchmarks/: CMakeLists.txt  benchmark.cpp
cmake/: CppInterOpConfig.cmake.in  CppInterOpConfigVersion.cmake.in
cmake/CppInterOp/: CppInterOpConfig.cmake.in
cmake/modules/: GoogleBenchmark.cmake  GoogleTest.cmake
docker/: Dockerfile  README.md  clone.sh  env.sh  setup.sh
docs/: CMakeLists.txt  DebuggingCppInterOp.rst  DevelopersDocumentation.rst  Emscripten-build-instructions.rst  FAQ.rst  InstallationAndUsage.rst  ReleaseNotes.md  UsingCppInterOp.rst  conf.py  doxygen-mainpage.dox  doxygen.cfg.in  index.rst  reference.rst  tutorials.rst
etc/: clang20-valgrind.supp  clang22-valgrind.supp
include/CppInterOp/: Box.h  CXCppInterOp.h  CppDispatch.h  CppInterOp.h  CppInterOpDispatch.h  CppInterOpRuntime.h  CppInterOpThunks.h  CppInterOpTypes.h  Dispatch.h  Error.h
include/clang-c/: CXCppInterOp.h
include/clang/Interpreter/: Compatibility.h  CppInterOp.h  CppInterOpInterpreter.h  DynamicLibraryManager.h  InterOp.h  InterOpInterpreter.h  Paths.h  VCSVersion.inc  Version.h
lib/: .clang-tidy
lib/CppInterOp/: BuildInfo.inc.in  CMakeLists.txt  CXCppInterOp.cpp  Compatibility.h  CppDispatch.cpp  CppInterOp.cpp  CppInterOp.td  CppInterOpAPI.td  CppInterOpDispatch.cpp  CppInterOpInterpreter.h  CppInterOpRuntime.h  Dispatch.cpp  DynamicLibraryManager.cpp  DynamicLibraryManager.h  DynamicLibraryManagerSymbol.cpp  ErrorInternal.cpp  InterpreterInfo.h  Paths.cpp  Paths.h  Tracing.cpp  Tracing.h  clangCppInterOp.def  cling-exports.ld  exports.ld
lib/Interpreter/: CMakeLists.txt  CXCppInterOp.cpp  Compatibility.h  CppInterOp.cpp  CppInterOpInterpreter.h  DynamicLibraryManager.cpp  DynamicLibraryManager.h  DynamicLibraryManagerSymbol.cpp  InterOp.cpp  Paths.cpp  Paths.h  exports.ld
patches/llvm/: CppInterOp-temp-testing.patch  Windows-emscripten-clang21-1-CrossCompile.patch  clang-21-1-add-back-darwin-legacy-framework.patch  clang16-1-Value.patch  clang16-D141215-Value.patch  clang16-D148435-WeakRefs.patch  clang17-1-NewOperator.patch  clang20-1-out-of-process-jit-execution.patch  clang20-1-out-of-process.patch  clang20-2-out-of-process-jit-execution.patch  clang20-2-out-of-process.patch  clang21-1-Value_getPointerAlignment.patch  cling16-1-Error-Handling.patch  emscripten-clang19-3-remove-zdefs.patch  emscripten-clang21-2-enable_exception_handling.patch  emscripten-clang21-3-llvm-abi-annotation-remote.patch  emscripten-clang21-3-revert-7b0f70a9b26ab082e02abd908d1622105fa1ec42.patch  emscripten-clang21-reduce-emscripten-shared-library-size.patch  emscripten-clang22-1-enable_exception_handling.patch
plugins/clad/: CMakeLists.txt
scripts/: container_build.py  tag-release.sh
scripts/builder/: build.py  config.yml  pipeline.yml  utils.py
tests/smoke/: CMakeLists.txt  smoke_test.cpp
unittests/: .clang-tidy  CMakeLists.txt
unittests/CppInterOp/: CAPITest.cpp  CMakeLists.txt  CUDATest.cpp  CladTest.cpp  CommentReflectionTest.cpp  CppInterOpThunksTest.cpp  DispatchAPITest.cpp  DispatchInit.cpp  DispatchSmokeTest.cpp  DispatchTest.cpp  DyldDispatchTest.cpp  DynamicLibraryManagerTest.cpp  EnumReflectionTest.cpp  FunctionReflectionTest.cpp  HandleTypesTest.cpp  InterpreterTest.cpp  JitTest.cpp  PathsTest.cpp  PerfCompare.h  ResultTest.cpp  ScopeReflectionTest.cpp  TestDownstreamLoader.cpp  TestPaths.h  TracingTests.cpp  TypeReflectionTest.cpp  Utils.cpp  Utils.h  VTableOverlayCrossTUBench.cpp  VTableOverlayTest.cpp  VariableReflectionTest.cpp  main.cpp
unittests/CppInterOp/APINotes/: TestAttributeMerge.h
unittests/CppInterOp/TestDownstreamLib/: TestDownstreamLib.cpp  TestDownstreamLib.h
unittests/CppInterOp/TestSharedLib/: CMakeLists.txt  TestSharedLib.cpp  TestSharedLib.h
unittests/CppInterOp/TestSharedLib1/: CMakeLists.txt  TestSharedLib1.cpp  TestSharedLib1.h
unittests/CppInterOp/TestSharedLib2/: CMakeLists.txt  TestSharedLib.cpp  TestSharedLib.h  TestSharedLib2.cpp  TestSharedLib2.h
unittests/CppInterOp/TestSharedLib3/: CMakeLists.txt  TestSharedLib3.cpp  TestSharedLib3.h
unittests/InterOp/: CMakeLists.txt  EnumReflectionTest.cpp  FunctionReflectionTest.cpp  InterpreterTest.cpp  ScopeReflectionTest.cpp  TypeReflectionTest.cpp  Utils.cpp  Utils.h  VariableReflectionTest.cpp
unittests/InterOp/.cph/: .VariableReflectionTest.cpp_4771a2ca68bd3fd5af7788c226c83d55.prob
utils/TableGen/: CMakeLists.txt  CppInterOpEmitter.cpp  TableGen.cpp
